# librime

./: .gitignore  CMakeLists.txt  build.bat
plugins/cloud/: CMakeLists.txt
plugins/cloud/src/: cloud_module.cc  todo_processor.h
plugins/cloud/test/: CMakeLists.txt  todo_test.cc
plugins/rime-sample/: CMakeLists.txt
plugins/rime-sample/src/: sample_module.cc  trivial_filter.cc  trivial_filter.h  trivial_translator.cc
src/rime/: menu.h
